--- a/examples/medusa/vicuna_7b_stage1.yml
+++ b/examples/medusa/vicuna_7b_stage1.yml
@@ -44,7 +44,7 @@ resume_from_checkpoint:
 local_rank:
 logging_steps: 1
 xformers_attention:
-flash_attention: true
+flash_attention: false
 
 warmup_steps: 40
 eval_steps: 40
