--- a/examples/medusa/vicuna_7b_stage1.yml
+++ b/examples/medusa/vicuna_7b_stage1.yml
@@ -9,7 +9,7 @@ load_in_4bit: false
 strict: false
 
 datasets:
-  - path: /mnt/task_runtime/zyk/ShareGPT_V4.3_unfiltered_cleaned_split.json
+  - path: /mnt/task_runtime/sh_workspace/zyk/ShareGPT_V4.3_unfiltered_cleaned_split.json
     type: sharegpt
 dataset_prepared_path:
 val_set_size: 0.01
@@ -72,3 +72,4 @@ ddp_find_unused_parameters: true
 # Stage 1: only train the medusa heads
 # Stage 2: train the whole model
 # learning_rate: 0.0005
+# - path: /mnt/task_runtime/zyk/ShareGPT_V4.3_unfiltered_cleaned_split.json
